--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,18 @@ spring.thymeleaf.prefix=file:src/main/resources/templates/
 # Static resources reloading during development
 spring.thymeleaf.resources.static-locations: file:src/main/resources/static/
 spring.thymeleaf.resourcescache-period: 0
+
+spring.datasource.url=jdbc:h2:file:./db/sampledb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
+
+# Enabling H2 Console
+spring.h2.console.enabled=true
+spring.h2.console.settings.web-allow-others=true
+
+# Custom H2 Console URL
+spring.h2.console.path=/h2
